# soundgen

./: .gitignore  README.md  pyproject.toml  run_tensorboard.sh
configs/: vae_1d.json  vae_default.json
data/tiny_piano/: tiny_piano.maxpat
experiments/: vae_1d.ipynb  vae_simple.ipynb
experiments/lightning_logs/vae/: events.out.tfevents.1770487788.MacBook-Boris.local.27757.1
experiments/vae_simple/: hparams.yaml
src/soundgen/: __init__.py  configs.py
src/soundgen/datasets/: __init__.py  fsdd.py  tiny_piano.py
src/soundgen/models/: decoder_upsample.py  utils.py  vae.py
src/soundgen/scripts/: train.py
src/soundgen/transformations/: augment.py  postprocess.py  preprocess.py  utils.py
