[project]
name = "soundgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Boris Podolny", email = "bpodolnyi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[project.scripts]
soundgen = "soundgen:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
